2007-06-03  Srinivasa Ragavan  <sragavan@novell.com>

	* configure.in: Fix for picking evolution without version 
	specification in the installed files.

2007-06-01  Matthew Barnes  <mbarnes@redhat.com>

	* configure.in: Fix an implicit function declaration in the
	LDAP Paged Control test program.

2007-06-01  Srinivasa Ragavan  <sragavan@novell.com>

	** Adds support for GAL Caching and summary. It uses libdb and makes it
	a soft dependency.

	* addressbook/Makefile.am:
	* addressbook/e-book-backend-exchange.c: (update_cache):
	* addressbook/e-book-backend-gal.c: (ldap_reconnect),
	(get_contact), (get_contact_list), (func_contains),
	(member_populate), (get_time_stamp), (build_contact_from_entry),
	(ldap_search_handler), (get_contacts_from_cache),
	(start_book_view), (parse_page_control), (dosearch),
	(generate_cache), (authenticate_user), (set_mode),
	(get_supported_auth_methods), (load_source), (dispose):
	* configure.in:

2007-05-26  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* addressbook/apps_exchange_addressbook.schemas.in.in: Fix
	typo. Fix from Elizabeth Greene <nerdygirl_ellie@yahoo.com>
	(#424419).

2007-05-19  Matthew Barnes  <mbarnes@redhat.com>

	* camel/camel-exchange-folder.c:
	* storage/exchange-migrate.c:
	Use g_mkdir_with_parents() instead of e_util_mkdir_hier().  (#439579)

2007-05-14  Srinivasa Ragavan <sragavan@novell.com>

	** NEWS, configure.in: Evolution exchange 2.11.2 release

2007-04-27  Matthew Barnes  <mbarnes@redhat.com>

	* addressbook/Makefile.am:
	Add a CLEANFILES rule to remove a schema file.  (#433967)

2007-04-27  Matthew Barnes  <mbarnes@redhat.com>

	* camel/camel-exchange-journal.c:
	* camel/camel-exchange-folder.c:
	* camel/camel-exchange-provider.c:
	* camel/camel-exchange-transport.c:
	* camel/camel-exchange-store.c:
	* camel/camel-stub.c:
	Use GLib's i18n support instead of Camel's.  (#418852)

2007-02-23  Srinivasa Ragavan <sragavan@novell.com>

	** NEWS, configure.in: Evolution exchange 2.11.1 release
